added endpoint to create new user
